<resources>
    <string name="app_name">MobiSecure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_friend">FriendActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_register">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_old_match_password">Old passwords does not match</string>
    <string name="error_match_password">Passwords does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="parse_app_id">NbyswoCh59XLOJT7G2ky2Wa2WkKtdujtlmR0zZfs</string>
    <string name="parse_client_key">z9MNpKgmPxXcC5Mkt1JOxC49TOPLn6NHD9qfM9Z8</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="sample_device_admin_description">super admin</string>
    <string name="sample_device_admin">screen lock setting</string>
</resources>
